# schedule-parser

./: .dockerignore  .flake8  Dockerfile  README.md  config.py  main.py  pyproject.toml  scheduler.py
data/: schedule.csv
parser/: parser.py
parser/constants/: weekdays.py
parser/services/: encoding_service.py  file_service.py  parsers_service.py  teachers_service.py
utils/: date_helper.py
