[project]
name = "bseu_parser"
version = "0.1"
description = "BSEU Schedule parser - backend"
authors = [
    {name = "a.vinograd.dci@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.4.0,<6.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false